--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "product",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.15.3"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon .bin/www"
@@ -12,7 +15,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql2-promise": "^0.1.4"
+    "mysql2-promise": "^0.1.4",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
